dotnet_macros/tests/ui/dotnet_enum_missing_repr.stderr
error: #[dotnet_enum]: add an explicit #[repr(i8/u8/i16/u16/i32/u32/i64/u64)]
 --> tests/ui/dotnet_enum_missing_repr.rs:4:10
  |
4 | pub enum Status {
  |          ^^^^^^
