dotnet_macros/tests/ui/dotnet_enum_missing_repr.rs
use dotnet_macros::dotnet_enum;

#[dotnet_enum(name = "Example.Status")]
pub enum Status {
    Ready = 1,
}

fn main() {}
